<resources>
    <string name="app_name">ShoesStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password_label">password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_label">E-mail</string>
    <string name="shoe_store">Shoes Store</string>
    <string name="welcome">Welcome to Shoes Store</string>
    <string name="add_your_fav">Add your favorite shoes, put some details for each one and browse your shoes</string>
    <string name="button">Next</string>
    <string name="instruction1">Instruction 1</string>
    <string name="instruction_desc1">press the "+" in the bottom right corner to add new shoes to the shoes list. you can save or cancel the data you entered by pressing the button respectively.</string>
    <string name="shoes_details">Shoes Details</string>
    <string name="add_shoes">add Shoes</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="name">Name</string>
</resources>